# microsoft-opentelemetry-poc

./: .env.a365  .env.template  .gitignore  A365-SETUP.md  README.md  agent.py  host_agent_server.py  microsoft_distro_observability_config.py  observability_config.py  pyproject.toml
docker/: docker-compose.yml  otel-collector-config.yml
docs/: AGENT-CODE-WALKTHROUGH.md  DOTNET-OTEL-STATE.md  JAVASCRIPT-OTEL-STATE.md  PYTHON-OTEL-STATE.md  SETUP.md  considerations.md  demo-script.md
manifest/: agenticUserTemplateManifest.json  manifest.json
microsoft/opentelemetry/: _configure.py  _constants.py  _types.py
microsoft/opentelemetry/_utils/: configurations.py  instrumentation.py
src/: _workarounds.py  agent.py  host_agent_server.py  instrumentation_span_processor.py  microsoft_distro_observability_config.py  observability_config.py  start_with_generic_host.py
